@@ -1,12 +1,12 @@
 DIST xstream-distribution-1.2.1-src.zip 5344441 RMD160 69f1542abbb806f5befe4e2e48388dbd181166bf SHA1 10670cc33e43ff42d56348d04367857ac2276376 SHA256 739d33c5c95e6da0e81b83c0f0174db77da004fb32179ed9f8be6ec5ad3d68ef
-EBUILD xstream-1.2.1.ebuild 1811 RMD160 8d6b186bdf0d2e53571639d2dfec02570793f5a7 SHA1 2b13c3050ce3b1626d37d9d3918edbd50327a90d SHA256 509cf8f5826725740871b95f33042ee0f715778e01fbcb4e92b2305f9a2669b3
-MD5 7039ab4333effaaa7f22db779e04fda5 xstream-1.2.1.ebuild 1811
-RMD160 8d6b186bdf0d2e53571639d2dfec02570793f5a7 xstream-1.2.1.ebuild 1811
-SHA256 509cf8f5826725740871b95f33042ee0f715778e01fbcb4e92b2305f9a2669b3 xstream-1.2.1.ebuild 1811
-MISC ChangeLog 464 RMD160 d956030bffd3758150134c994b82cf63313e9863 SHA1 441eb96ece524d6bce9f57bf72b22b282cf6dac3 SHA256 c7c6b3423e71609cf00f188c072940c6206a6a3102551bf60233f736e6a6498f
-MD5 43ce05eb2085f6e68e515abc01082da6 ChangeLog 464
-RMD160 d956030bffd3758150134c994b82cf63313e9863 ChangeLog 464
-SHA256 c7c6b3423e71609cf00f188c072940c6206a6a3102551bf60233f736e6a6498f ChangeLog 464
+EBUILD xstream-1.2.1.ebuild 1818 RMD160 2c8bed28dae8bfded9b3dc52a8e6f656cdf78d09 SHA1 74b1891f9074e43ef1b3961e0f1aaf2e8fdda6c4 SHA256 c71624c160bbae1b091eb5aca4037d38c213fc2a6596cb45c1a8ef32823513a2
+MD5 d06d4fe27f7954b9677521e4edf993ae xstream-1.2.1.ebuild 1818
+RMD160 2c8bed28dae8bfded9b3dc52a8e6f656cdf78d09 xstream-1.2.1.ebuild 1818
+SHA256 c71624c160bbae1b091eb5aca4037d38c213fc2a6596cb45c1a8ef32823513a2 xstream-1.2.1.ebuild 1818
+MISC ChangeLog 607 RMD160 1aa0bda174dd1dc17e90e6dec4bf715acff0789d SHA1 45df1e87461a121507844754983a6a196ec0c40a SHA256 4875ffc76b350360a29b6d71e3ae25caa36c93208c770cbcde272bcbe0458184
+MD5 118f668326c95c2117bd47b30c347f55 ChangeLog 607
+RMD160 1aa0bda174dd1dc17e90e6dec4bf715acff0789d ChangeLog 607
+SHA256 4875ffc76b350360a29b6d71e3ae25caa36c93208c770cbcde272bcbe0458184 ChangeLog 607
 MD5 0921a50907163774b6e690ee3cefe3d1 files/digest-xstream-1.2.1 286
 RMD160 4be8db77b596d8daa80979772881f316c8d28c29 files/digest-xstream-1.2.1 286
 SHA256 48a8951d68c90473c5cb2d2aca38488ac5c27f5c86bbe27360df5cbd9250031e files/digest-xstream-1.2.1 286
