@@ -3,6 +3,9 @@
 # $Header: $
 
   15 Apr 2007; Petteri Räty <betelgeuse@gentoo.org> xstream-1.2.1.ebuild:
+  Force >=sun-jdk-1.6 until lower ones work and add back KEYWORDS.
+
+  15 Apr 2007; Petteri Räty <betelgeuse@gentoo.org> xstream-1.2.1.ebuild:
   Now actually emerges.
 
   15 Apr 2007; Petteri Räty <betelgeuse@gentoo.org> xstream-1.2.1.ebuild:
